--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,6 @@ ul { padding: 0; margin: 0; list-style: none; }
 nav { padding: 10px 0; }
 h1, h2, h3, h4, h5, h6 { margin: 0; }
 /***************************************/
-div {
-    border-style: solid;
-}
 .container {
     margin: 0 auto 0 auto;
     max-width: 1170px;
@@ -40,3 +37,12 @@ section { display: flex; }
 .account a {font-size: 14px;}
 .profile-pic {width: 60px; height: 60px;}
 .profile-pic img {border-radius: 100px; max-width: 100%;}
+.hero {background-image: url("../img/hero.jpg"); background-size: cover; height: 400px; background-position: center center; text-transform: uppercase;}
+.hero h1 {position: relative; left: -30px;}
+.hero h2 {color: #faa541;}
+.hero h1, .hero h2 {font-size: 63px; font-weight: 700; line-height: 0.9}
+.hero p {letter-spacing: 2px; font-weight: 700; font-size: 21px; margin: 0 0 10px;}
+.banner {margin: 55px 15px; width: 100%; border-top: 1px solid #a0a0a0; border-bottom: 1px solid #a0a0a0; padding: 25px 0;}
+.banner img {width: 250px;}
+.banner-text {font-size: 30px; font-weight: 700; text-transform: uppercase; line-height: 1; text-align: center;}
+.banner-text > div:last-child {font-size: 16px; font-weight: 400; margin-top: 5px;}
