--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ section { display: flex; }
 .account a {font-size: 14px;}
 .profile-pic {width: 60px; height: 60px;}
 .profile-pic img {border-radius: 100px; max-width: 100%;}
-.hero {background-image: url("../img/hero.jpg"); background-size: cover; height: 400px; background-position: center center; text-transform: uppercase;}
+.hero {background-image: url('../img/hero.jpg'); background-size: cover; height: 400px; background-position: center center; text-transform: uppercase;}
 .hero h1 {position: relative; left: -30px;}
 .hero h2 {color: #faa541;}
 .hero h1, .hero h2 {font-size: 63px; font-weight: 700; line-height: 0.9}
@@ -46,3 +46,8 @@ section { display: flex; }
 .banner img {width: 250px;}
 .banner-text {font-size: 30px; font-weight: 700; text-transform: uppercase; line-height: 1; text-align: center;}
 .banner-text > div:last-child {font-size: 16px; font-weight: 400; margin-top: 5px;}
+.category {flex: 0 0 25%; padding: 0 15px;}
+.category img {width: 100%;}
+.category-text {color: #364147; padding: 30px 0; text-transform: uppercase; text-align: center;}
+.category-text > div {font-size: 16px; font-weight: 200; color: #faa541;}
+.category-text h3 {font-size: 30px; font-weight: 700; line-height: 1}
